[package]
name = "wasm-hashes"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
md-5 = {version = "0.10.6", optional = true}
sha1 = {version = "0.10.6", optional = true}
sha2 = {version = "0.10.9", optional = true}
wasm-bindgen = "0.2.100"


[features]
default = []
md5 = ["dep:md-5"]
sha1 = ["dep:sha1"]
sha256 = ["dep:sha2"]
sha512 = ["dep:sha2"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = "symbols"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-bulk-memory"]
